<resources>
    <string name="app_name">Tip Time</string>
    <string name="input_hint">Cost of service.</string>
    <string name="service_question">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate_btn_text">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>